# RM_homework

./: .gitignore
2021-zhaoxin/1/: README.md  main.cpp
2021-zhaoxin/2/: README.md  main.cpp
2021-zhaoxin/3/: README.md  handle.cpp
2021-zhaoxin/4/: README.md
2021-zhaoxin/4/source/: main.cpp
2022-zhaoxin/A/: test_all.sh
2022-zhaoxin/A/grad1/: 12.in  2.in  5.in  7.in  8.in
2022-zhaoxin/A/grad2/: 2.in  3.in
2022-zhaoxin/A/grad3/: 10.in  5.in  6.in  7.in  8.in  9.in
2022-zhaoxin/B/: framework.cpp  framework.hpp  main.cpp  node.hpp  oper.cpp  oper.hpp
w01-20221005/task1_shell/: README.md  doit.sh
w01-20221005/task1_shell/test_dir/: a.c  b.h  d.c
w01-20221005/task2_apple/: CMakeLists.txt  README.md  main.cpp
w01-20221005/task3_bullet/: main.cpp
w02-20221016/task1_license_plate/: CMakeLists.txt  main.cpp
w02-20221016/task2_3/: compile_commands.json  star.hpp  trans.cpp  trans.hpp
w04-20221102/task1_coordinates/: CMakeLists.txt  main.cpp
w04-20221102/task1_coordinates/data/: big_armor_scale.hpp
w04-20221102/task2_status/: CMakeLists.txt  main.cpp
w04-20221102/task4_calibrate/: main.cpp
w05-20221113/task1_match/: CMakeLists.txt  main.cpp
w05-20221113/task2_depth/: CMakeLists.txt  VO.cpp  VO.h  main.cpp
w05-20221113/task3_binocular/: CMakeLists.txt  detect_infantry.cpp  detect_infantry.hpp  main.cpp
w05-20221113/task4_optical_flow/: main.cpp
zhaoxin/: README.md
zhaoxin/A/: main.cpp
zhaoxin/B/: message.cpp  message.hpp  node.cpp  output.cpp  output.hpp
zhaoxin/C/: main.cpp
zhaoxin/D/: CMakeLists.txt  main.cpp
(+26 files in other folders)
