cmake_minimum_required(VERSION 3.0)
project( Coordinates )
set( CMAKE_CXX_STANDARD 17 )
find_package( OpenCV REQUIRED )
find_package (Eigen3 REQUIRED NO_MODULE)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( main main.cpp )
target_link_libraries( main ${OpenCV_LIBS} )
target_link_libraries ( main Eigen3::Eigen )
